--- a/package.json
+++ b/package.json
@@ -37,7 +37,14 @@
     "e2e": "npm run postinstall:web && ng e2e",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "^7.2.3",
+    "@angular/cdk": "^7.3.0",
+    "@angular/material": "^7.3.0",
+    "@types/jquery": "^3.3.29",
+    "hammerjs": "^2.0.8",
+    "pnotify": "^4.0.0-beta.2"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.11.4",
     "@angular/cli": "7.1.4",
