--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
     "ng": "ng",
-    "start": "npm run postinstall:electron && npm-run-all -p ng:serve electron:serve",
+    "start": "ng build && electron .",
     "build": "npm run postinstall:electron && npm run electron:serve-tsc && ng build",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
@@ -41,8 +41,10 @@
     "@angular/animations": "^7.2.3",
     "@angular/cdk": "^7.3.0",
     "@angular/material": "^7.3.0",
+    "@sentry/browser": "^5.0.5",
     "@types/jquery": "^3.3.29",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "pnotify": "^4.0.0-beta.2"
   },
   "devDependencies": {
